tests/baselines/reference/unusedTypeParameterInFunction1.errors.txt
unusedTypeParameterInFunction1.ts(1,12): error TS6133: 'T' is declared but its value is never read.


==== unusedTypeParameterInFunction1.ts (1 errors) ====
    function f1<T>() {
               ~~~
!!! error TS6133: 'T' is declared but its value is never read.
    
    }